config mini project

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="/images/RevoU.png" height="100px"
+                <img src="https://github.com/s37entroot/CodingCamp-09Feb26-Angga/blob/main/images/RevoU.png?raw=true" height="100px"
                 alt="Logo">
             </div>
             <div class="nav-links">
