config mini project

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="bg-[#ffde03] min-h-screen flex justify-center py-12 px-4">
 
     <div class="w-full max-w-md text-center">
-        <h1 class="text-4xl font-bold mb-8 text-black">Don't Forget!</h1>
+        <h1 class="text-4xl font-bold mb-8 text-black">Don’t Forget! To-Do List</h1>
 
         <div class="bg-black p-4 rounded-lg flex flex-col gap-3 mb-4 shadow-xl">
             <div class="flex gap-2">
